working on profile picture update
-organized files into folders
-got the fragment to work
-profile picture was able to be changed
-profile picture does not persist when profile button is clicked.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">CommunityEats</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login">login</string>
+    <string name="password">password</string>
+    <string name="username">username</string>
 </resources>
